--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1>Hey. I am a big heading</h1>
-<p>Hey. I am a paragraph element. Cool huh?</p>
-<a href="https://google.com" target="_blank" title="Lets go to Google">Click me! I am a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+<body>
+	<h1>Hey. I am a big heading</h1>
+	<p>Hey. I am a <b>paragraph</b> element. Cool huh?</p>
+	<a href="https://google.com" target="_blank" title="Lets go to Google">Click me! I am a link!</a>
+	<p>My name is:<br>Kitty Cat</p>
+	<img src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png">
+</body>
+</html>
